# camodocal

./: .gitignore  .travis.yml  CMakeLists.txt  CamOdoCalConfig.h.in  CamOdoCalPathConfig.h.in  LICENSE.txt  README.md
cmake/: BinaryUtilities.cmake  BuildConfig.cmake  BuildConfigGCC.cmake  CAMODOCALConfig.cmake.in  CompareVersionStrings.cmake  DependencyUtilities.cmake  FindBLAS.cmake  FindEigen3.cmake  FindGLIB2.cmake  FindGLIBMM2.cmake  FindGLUT.cmake  FindGTHREAD2.cmake  FindGTest.cmake  FindGflags.cmake  FindGlog.cmake  FindLAPACK.cmake  FindLibDL.cmake  FindLibm.cmake  FindLibnsl.cmake  FindLibrt.cmake  FindOSG.cmake  FindOpenCV.cmake  FindOpenGL.cmake  FindOpenMP.cmake  FindQt4.cmake  FindSIGC++.cmake  FindSuiteSparse.cmake  FlagUtilities.cmake  HandleLibraryTypes.cmake  InstallProjectConfig.cmake  InstallSettings.cmake  InstallUtilities.cmake  LibraryConfig.cmake  ParseArguments.cmake  SourceFileUtilities.cmake
cmake/doc/: CMakeLists.txt
cmake/doc/api/: CMakeLists.txt  doxy.config.in
include/camodocal/: CamOdoCalibration.h  CamRigOdoCalibration.h  CameraOdometerCalibration.h  CataCameraCalibration.h  EigenUtils.h  SensorDataBuffer.h  SparseGraph.h
src/: CMakeLists.txt
src/brisk/: CMakeLists.txt
src/brisk/include/brisk/: brisk.h  hammingsse.hpp
src/brisk/src/: brisk.cpp  demo.cpp
src/calib/: CMakeLists.txt  CalibrationWindow.cc  CalibrationWindow.h  CamOdoCalibration.cc  CamOdoCalibration_test.cc  CamOdoThread.cc  CamOdoThread.h  CamOdoWatchdogThread.cc  CamOdoWatchdogThread.h  CamRigOdoCalibration.cc  CamRigThread.cc  CamRigThread.h  CameraCalibration.cc  CameraRigBA.cc  CameraRigBA.h  HandEyeCalibration.cc  HandEyeCalibration_test.cc  OdometryError.h  PlanarHandEyeCalibration.cc  PlanarHandEyeCalibration_test.cc  StereoCameraCalibration.cc  utils.cc  utils.h
src/camera_models/: CMakeLists.txt  Camera.cc  CameraFactory.cc  CataCamera.cc  CataCamera_test.cc  CostFunctionFactory.cc  CostFunctionFactory.h  EquidistantCamera.cc  EquidistantCamera_test.cc  PinholeCamera.cc  PinholeCamera_test.cc  ScaramuzzaCamera.cc
src/camera_systems/: CMakeLists.txt  CameraRigExtrinsics.cc  CameraSystem.cc
src/camodocal_extrinsic/: CMakeLists.txt  CamOdoCalibration.cc  CamRigOdoCalibration.cc  CameraRigBA.cc  utils.h
src/camodocal_intrinsic/: CMakeLists.txt  Chessboard.cc  ChessboardQuad.h
src/catacamera/: CMakeLists.txt  CameraRigExtrinsics.cc  CameraRigExtrinsics.h  CataCamera.cc  CataCamera.h  CataCameraCalibration.cc  CataReprojectionError.h
src/ceres-solver/: CMakeLists.txt
src/ceres-solver/include/ceres/: solver.h
src/ceres-solver/internal/ceres/: CMakeLists.txt  collections_port.h  solver.cc
src/chessboard/: CMakeLists.txt  Chessboard.cc  ChessboardQuad.h
src/dbow2/: CMakeLists.txt  LICENSE.txt  demo.cpp
src/dbow2/DBoW2/: BowVector.cpp  BowVector.h  CMakeLists.txt  DBoW2.h  FBrief.cpp  FBrief.h  FClass.h  FOrb.cpp  FOrb.h  FSurf64.cpp  FSurf64.h  FeatureVector.cpp  FeatureVector.h  QueryResults.cpp  QueryResults.h  ScoringObject.cpp  ScoringObject.h  TemplatedDatabase.h  TemplatedVocabulary.h
src/dbow2/DLoopDetector/: DLoopDetector.h  LICENSE.txt  TemplatedLoopDetector.h
src/dbow2/DUtils/: BinaryFile.cpp  BinaryFile.h  CMakeLists.txt  ConfigFile.cpp  ConfigFile.h  DException.h  DUtils.h  DebugFunctions.cpp  DebugFunctions.h  FileFunctions.cpp  FileFunctions.h  FileModes.h  LICENSE.txt  LUT.cpp  LUT.h  LineFile.cpp  LineFile.h  Math.hpp  Profiler.cpp  Profiler.h  Random.cpp  Random.h  STL.h  StringFunctions.cpp  StringFunctions.h  TimeManager.cpp  TimeManager.h  Timestamp.cpp  Timestamp.h
src/dbow2/DUtilsCV/: CMakeLists.txt  CvVersion.h  DUtilsCV.h  Drawing.cpp  Drawing.h  GUI.cpp  GUI.h  Geometry.cpp  Geometry.h  IO.cpp  IO.h  LICENSE.txt  Mat.cpp  Mat.h  Transformations.cpp  Transformations.h  Types.cpp  Types.h
src/dbow2/DVision/: BRIEF.cpp  BRIEF.h  BundleCamera.cpp  BundleCamera.h  CMakeLists.txt  DVision.h  FSolver.cpp  FSolver.h  HSolver.cpp  HSolver.h  ImageFunctions.cpp  ImageFunctions.h  LICENSE.txt  Matches.cpp  Matches.h  ORB.cpp  ORB.h  PLYFile.cpp  PLYFile.h  PMVSCamera.cpp  PMVSCamera.h  PatchFile.cpp  PatchFile.h  PixelPointFile.cpp  PixelPointFile.h  SurfSet.cpp  SurfSet.h
src/examples/: CMakeLists.txt  extrinsic_calib.cc  intrinsic_calib.cc  stereo_calib.cc  train_voctree.cc
src/extrinsic_calib/: AtomicData.h  CMakeLists.txt  CalibrationWindow.cc  CalibrationWindow.h  CamRigOdoCalibration.cc  CamRigOdoCalibration.h  CameraOdometerCalibration.cc  CameraRigBA.cc  CameraRigBA.h  CameraRigCalibration.cc  CameraRigCalibration.h  EigenUtils.h  ReprojectionError.h  camera_odometer_calibration.cc  extrinsic_calib.cc  gpl.h  utils.cc  utils.h
src/features2d/: CMakeLists.txt  ORBGPU.cc  ORBGPU.h  SurfGPU.cc  SurfGPU.h
src/gpl/: CMakeLists.txt  CubicSpline.cc  CubicSpline.h  EigenQuaternionParameterization.cc  EigenUtils.h  OpenCVUtils.h  gpl.cc  gpl.h
src/infrastr_calib/: CMakeLists.txt  InfrastructureCalibration.cc  LocationRecognition.cc  LocationRecognition.h
src/intrinsic_calib/: CMakeLists.txt  Chessboard.cc  Chessboard.h  ChessboardCorner.h  intrinsic_calib.cc
src/location_recognition/: CMakeLists.txt  LocationRecognition.cc  LocationRecognition.h
src/npoint/: CMakeLists.txt
src/npoint/five-point/: five-point.cpp  five-point.hpp  main.cpp  modelest.cpp  precomp.hpp  rt-iter.hpp  two-point.hpp
src/npoint/four-point/: five-point.cpp  four-point-helper.cpp  four-point.hpp
src/npoint/one-point/: modelest.cpp  one-point.cpp  one-point.hpp
src/pose_estimation/: CMakeLists.txt  P3P.cc  P3P.h
src/pose_graph/: CMakeLists.txt  PoseGraph.cc  PoseGraphError.h
src/pugixml/: CMakeLists.txt  foreach.hpp  readme.txt
src/sparse_graph/: CMakeLists.txt  Odometer.cc  Odometer.h  Odometry.cc  Pose.cc  PoseE.cc  SparseGraph.cc  SparseGraph.h  SparseGraphUtils.cc
src/visual_odometry/: CMakeLists.txt  FeatureTracker.cc  FeatureTracker.h  GpuWrap.cc  GpuWrap.h  ORBGPU.cc  ReprojectionError.h  SlidingWindowBA.cc  SlidingWindowBA.h  SlidingWindowBA_sim.cc  SlidingWindowBA_test.cc  SurfGPU.cc  SurfGPU.h
(+29 files in other folders)
