add_subdirectory(brisk)
add_subdirectory(calib)
add_subdirectory(camera_models)
add_subdirectory(camera_systems)
add_subdirectory(ceres-solver)
add_subdirectory(chessboard)
add_subdirectory(dbow2)
add_subdirectory(examples)
add_subdirectory(gpl)
add_subdirectory(npoint)
add_subdirectory(pugixml)
add_subdirectory(sparse_graph)
add_subdirectory(visual_odometry)
